# krp-launcher

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.github/workflows/: release.yml
builder/: Cargo.toml
builder/src/: main.rs
docs/: code-signing.md  manifest-signing.md  manifest.example.json  modlist.example.toml  phase6-auth.md
scripts/: set-version.mjs
src/: App.css  App.tsx  InstallPathModal.tsx  LoginScreen.tsx  SettingsModal.tsx  SkinPanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  download.rs  error.rs  install.rs  java.rs  launch.rs  lib.rs  main.rs  manifest.rs  paths.rs  progress.rs  server.rs  settings.rs  skin.rs  state.rs  vanilla.rs
src/lib/: api.ts  updater.ts
