[package]
name = "krp-builder"
version = "0.1.0"
edition = "2021"
description = "Dev-утилита: собирает дистрибутив способа Б (NeoForge + моды) и manifest.json для лаунчера Kingdom RP"

# Отдельный standalone-крейт (НЕ часть src-tauri) — лёгкий CLI без Tauri.

[[bin]]
name = "krp-builder"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
anyhow = "1"
# Подпись manifest.json (minisign, prehashed). Лаунчер проверяет тем же форматом
# (minisign-verify). Сборщик — CLI в CI, его вес на лаунчер не влияет.
minisign = "0.9"
